Table scroll fix / z-index fix for tauri linux

--- a/src/components/Dataset/dataset.css
+++ b/src/components/Dataset/dataset.css
@@ -141,6 +141,7 @@
   display: block;
   padding-bottom: 0.5rem;
   cursor: pointer;
+  z-index: 1000;
 }
 .dataset__sidebar__container.right .dropdownOption__Content > .dropdown {
   padding: 0;
@@ -403,4 +404,15 @@
   background-color: transparent;
   outline: none;
   width: fit-content;
+}
+
+.table__container::-webkit-scrollbar{
+  background: #faf8ff;
+  width: 5px;
+  border: 1px rgb(104, 104, 104) solid;
+}
+.table__container::-webkit-scrollbar-thumb{
+  background: #dddd;
+  width: 100%;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
